--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Homepage 
+#title: Homepage 
 email: frandiazriollano@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Little corner of the internet where I plan on sharing some ideas. 
