--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  fdrio
 
+future: true
 # Build settings
 theme: minima
 plugins:
