adding toggle dark/light theme based on system settings

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,13 @@ github_username:  fdrio
 
 future: true
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+minima:
+  skin: auto #dark # or auto if you want it to switch with your system settings.
 
 # Exclude from processing.
 # The following items will not be processed, by default.
